<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_expense"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backgroun_color"
    tools:context=".AddExpenseActivity">

    <TextView
        android:text="@string/add_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#222831"
        android:layout_marginTop="15dp"
        android:id="@+id/textView"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:text="@string/add_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="18dp"
        android:id="@+id/textView2"
        android:textStyle="bold"
        android:textColor="#222831"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_category"
        android:textSize="20sp"
        android:textColor="#222831"
        android:layout_marginStart="15dp"
        android:textStyle="bold"
        android:layout_marginTop="150dp"/>

        <Spinner
            android:id="@+id/expCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:spinnerMode="dropdown"/>

    <TextView
        android:text="@string/add_Category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editName"
        android:layout_marginTop="90dp"
        android:id="@+id/textView3"
        android:textColor="#222831"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/editCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="9dp"
        android:layout_marginRight="15dp"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:ems="10"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:hint="@string/enter_expense_name"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp"
        android:id="@+id/editName"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:maxLength="25"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColorLink="@android:color/holo_blue_bright" />

    <TextView
        android:text="@string/add_Amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editCategory"
        android:layout_marginTop="7dp"
        android:id="@+id/textView4"
        android:textColor="#222831"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textStyle="bold"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:hint="Enter Your Amount..."
        android:textColorHint="@android:color/white"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/white"
        android:id="@+id/editAmount"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:maxLength="8"
        android:textSize="20sp"
        android:textColorLink="@android:color/holo_blue_bright" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/editAmount"
        android:layout_weight="2">

        <Button
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editAmount"
            android:layout_alignLeft="@+id/editAmount"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_background"
            android:text="@string/add_SubmitButton"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/addBtn"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:layout_toEndOf="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:layout_weight="1"
            android:background="@drawable/edittext_background"
            android:text="@string/add_CancelButton"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>