<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroun_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TextView
        android:text="@string/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:ems="10"
        android:padding="15dp"
        android:hint="Email"
        android:textColorHint="@android:color/white"
        android:background="@drawable/edittext_background"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/emailField" />

    <Button
        android:text="@string/login_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/signUpBtn"
        android:textColor="@android:color/white"
        android:background="@drawable/edittext_background"
        android:layout_below="@+id/loginBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/textView2"
        android:layout_below="@+id/emailField"
        android:textColor="@android:color/white"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_background"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:hint="Password"
        android:padding="15dp"
        android:id="@+id/passwordField"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:password="true" />

    <Button
        android:text="@string/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginBtn"
        android:textColor="@android:color/white"
        android:background="@drawable/edittext_background"
        android:layout_below="@+id/passwordField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/forgotTextLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpBtn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="124dp"
        android:layout_marginTop="38dp"
        android:text="Forgot Password?"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotTextLink"
        android:layout_alignParentStart="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="38dp"
        android:visibility="invisible"/>

</RelativeLayout>
