<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_expense"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroun_color"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ExpenseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.97"
            android:gravity="center_vertical"
            android:text="@string/current_balance"
            android:textColor="#222831"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currentBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="0.97"
            android:gravity="center_vertical"
            android:text="@string/_0"
            android:textColor="#222831"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:id="@+id/addExpenseHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addExpenseLabel"
                android:layout_width="304dp"
                android:layout_height="65dp"
                android:layout_weight="0.97"
                android:gravity="center_vertical"
                android:text="@string/addExpense_label"
                android:textColor="#222831"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/addExpenseBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/addExpenseHeader"
            android:orientation="vertical"
            android:visibility="visible">

            <ProgressBar
                android:id="@+id/noExpensesHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="175dp"
                android:gravity="center_horizontal"
                android:paddingTop="20dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/addExpenseButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/add" />
    </RelativeLayout>

    <ListView
        android:id="@+id/expensesListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:layout_weight="1"
        android:visibility="invisible" />

</RelativeLayout>